--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,23 @@
+:root {
+  /* variables */
+  --lighter-black: rgb(36, 36, 36);
+  --darker-black: rgb(20, 20, 20);
+  --blue: rgb(36, 94, 255);
+  --grey: rgb(243, 243, 243);
+  --white: rgb(255, 255, 255);
+}
+
 html {
   height: 100%;
 }
 
 body {
-  background-color: white;
+  background-color: var(--darker-black);
   position: relative;
   min-height: 100vh;
   padding: 0;
   margin: 0;
+  color: var(--white);
 }
 
 main {
@@ -33,8 +43,8 @@ main {
   align-items: center;
   text-align: center;
 
-  background-color: black;
-  color: white;
+  background-color: var(--lighter-black);
+  color: var(--white);
   padding: 0px 0px;
 
   /* Debug border */
@@ -50,7 +60,7 @@ main {
 }
 
 .navbar a {
-  color: white;
+  color: var(--white);
   font-weight: bold;
   margin: 0 12px;
   text-decoration: none;
@@ -63,8 +73,8 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
-  color: white;
+  background-color: var(--lighter-black);
+  color: var(--white);
   position: absolute;
   bottom: 0;
   width: 100%;
