--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: 'Poppins Regular';
+  src: url('fonts/Poppins-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Poppins Light';
+  src: url('fonts/Poppins-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Poppins Bold';
+  src: url('fonts/Poppins-Bold.ttf') format('truetype');
+}
+
 :root {
   /* variables */
   --lighter-black: rgb(36, 36, 36);
@@ -18,6 +33,7 @@ body {
   padding: 0;
   margin: 0;
   color: var(--white);
+  font-family: 'Poppins Light';
 }
 
 main {
