--- a/styles.css
+++ b/styles.css
@@ -9,17 +9,21 @@
 }
 
 @font-face {
+  font-family: 'Poppins Thin';
+  src: url('fonts/Poppins-Thin.ttf') format('truetype');
+}
+
+@font-face {
   font-family: 'Poppins Bold';
   src: url('fonts/Poppins-Bold.ttf') format('truetype');
 }
 
 :root {
   /* variables */
-  --lighter-black: rgb(36, 36, 36);
-  --darker-black: rgb(20, 20, 20);
-  --blue: rgb(36, 94, 255);
-  --grey: rgb(243, 243, 243);
+  --green-black: rgb(24, 28, 28);
   --white: rgb(255, 255, 255);
+  --border-color: rgb(55, 152, 106);
+  --easy-green-text: rgb(62, 207, 142);
 }
 
 html {
@@ -27,7 +31,7 @@ html {
 }
 
 body {
-  background-color: var(--darker-black);
+  background-color: var(--green-black);
   position: relative;
   min-height: 100vh;
   padding: 0;
@@ -36,12 +40,18 @@ body {
   font-family: 'Poppins Light';
 }
 
+/* CSS for main */
 main {
   padding: 0 20px 40px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+main h1 {
+  color: var(--white);
+  font-family: "Poppins Light";
 }
 
 /* CSS for navigation bar */
@@ -59,8 +69,9 @@ main {
   align-items: center;
   text-align: center;
 
-  background-color: var(--lighter-black);
+  background-color: var(--green-black);
   color: var(--white);
+  border-bottom: var(--border-color) 1px solid;
   padding: 0px 0px;
 
   /* Debug border */
@@ -83,14 +94,24 @@ main {
   letter-spacing: 2px;
 }
 
+.navbar h1 a {
+  color: var(--easy-green-text);
+  font-family: "Poppins Regular";
+}
+
+.nav-list {
+  font-family: 'Poppins Thin';
+}
+
 /* CSS for page footer */
 
 .footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--lighter-black);
+  background-color: var(--green-black);
   color: var(--white);
+  border-top: var(--border-color) 1px solid;
   position: absolute;
   bottom: 0;
   width: 100%;
