--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,6 @@ main h1 {
 .about-image img{
   border: 1px solid var(--border-color);
   border-radius: 30px;
-  max-width: 300px;
 }
 
 .about-text {
@@ -124,6 +123,19 @@ main h1 {
 
 .nav-list {
   font-family: 'Poppins Thin';
+}
+
+.nav-list li {
+  transition: transform 0.2s ease;
+}
+
+.nav-list li:hover{
+  transform: translateY(-4px);
+}
+
+.nav-list li:active{
+  transition: transform 0.1s ease;
+  transform: translateY(0px);
 }
 
 /* CSS for page footer */
