--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,28 @@ main h1 {
   margin-left: 20px;
 }
 
+/* CSS for portfolio page */
+.project {
+  align-items: center;
+  flex-direction: row;
+  border: 1px solid var(--border-color);
+  border-radius: 30px;
+  max-width: 600px;
+  margin-bottom: 30px;
+}
+
+.project img {
+  border-radius: 30px 30px 0 0;
+  border-bottom: var(--border-color) 1px solid;
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+}
+
+.project-details {
+  margin: 0px 30px 20px 30px;
+}
+
 /* CSS for navigation bar */
 
 .navbar {
