--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,72 @@ main h1 {
   flex: 1;
 }
 
+/* CSS for contact page */
+
+label {
+  display: block;
+  margin-bottom: 8px;
+  font-family: "Poppins Regular";
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  color: var(--white);
+  font-size: 16px;
+  resize: none;
+  background: transparent;
+  background-color: rgba(28, 255, 134, 0.151);
+  border: solid 1px rgb(100, 255, 167);
+  transition: border-color 0.3s ease, background-color 0.4s ease, transform 0.4s ease;
+  font-family: "Poppins Regular";
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus {
+  outline: none;
+  border-color: rgb(94, 94, 94);
+  background: transparent;
+}
+
+::placeholder {
+  color: rgb(114, 189, 154);
+}
+
+/* Add some spacing to the form */
+form {
+  width: 500px;
+  margin: 0 auto;
+}
+
+input[type="submit"] {
+  border: solid 1px var(--bright-green);
+  border-radius: 30px;
+  padding: 10px;
+  text-decoration: none;
+  color: var(--white);
+  background-color: var(--button-color);
+  transition: background-color 0.2s ease;
+  margin-bottom: 30px;
+  font-family: "Poppins Regular";
+}
+
+input[type="submit"]:hover {
+  background-color: var(--easy-green-text);
+}
+
+input[type="submit"]:active {
+  background-color: var(--bright-green);
+}
+
+
 /* CSS for navigation bar */
 
 .navbar {
