--- a/styles.css
+++ b/styles.css
@@ -74,11 +74,6 @@ main h1 {
   margin-right: 50px;
 }
 
-.about-image img{
-  border: 1px solid var(--border-color);
-  border-radius: 30px;
-}
-
 .about-text {
   flex: 1;
   margin-left: 20px;
@@ -95,12 +90,9 @@ main h1 {
   margin-bottom: 30px;
 }
 
+/* Override neat image with modified border-radius */
 .project img {
   border-radius: 30px 30px 0 0;
-  border-bottom: var(--border-color) 1px solid;
-  object-fit: cover;
-  width: 100%;
-  height: 300px;
 }
 
 .project-details {
@@ -306,4 +298,13 @@ form {
 
 .button:active {
   background-color: var(--bright-green);
+}
+
+/* Neat Image */
+.neat-image {
+  border: 1px solid var(--border-color);
+  border-radius: 30px;
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
 }
