feat: replace hover translation with underline for navbar anchors

--- a/styles.css
+++ b/styles.css
@@ -251,17 +251,9 @@ form {
   font-family: 'Poppins Thin';
 }
 
-.nav-list li {
-  transition: transform 0.2s ease;
-}
-
-.nav-list li:hover{
-  transform: translateY(-4px);
-}
-
-.nav-list li:active{
-  transition: transform 0.1s ease;
-  transform: translateY(0px);
+.nav-list li a:hover{
+  text-decoration: underline var(--easy-green-text) 1px;
+  text-underline-offset: 5px;
 }
 
 /* CSS for page footer */
