--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@
   --easy-green-text: rgb(62, 207, 142);
   --button-color: rgb(55, 152, 106);
   --bright-green: rgb(28, 255, 134);
+  --card-bg: rgba(56, 255, 162, 0.137);;
 }
 
 html {
@@ -81,18 +82,38 @@ main h1 {
 
 /* CSS for portfolio page */
 
+.project-container {
+  display: flex;
+  width: 100%;
+}
+
 .project {
+  flex-grow: 1;
   align-items: center;
   flex-direction: row;
   border: 1px solid var(--border-color);
   border-radius: 30px;
-  max-width: 600px;
   margin-bottom: 30px;
+  transition: transform 0.2s ease, background-color 0.6s ease;
+}
+
+.project-left {
+  margin-right: 15px;
+}
+
+.project-right {
+  margin-left: 15px;
+}
+
+.project:hover {
+  transform: translateY(-5px);
+  background-color: var(--card-bg);
 }
 
 /* Override neat image with modified border-radius */
 .project img {
-  border-radius: 30px 30px 0 0;
+  border-radius: 30px 30px 0px 0px;
+  border-width: 0px 0px 1px 0px;
 }
 
 .project-details {
