--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ main h1 {
 }
 
 .project {
-  flex-grow: 1;
+  flex: 1;
   align-items: center;
   flex-direction: row;
   border: 1px solid var(--border-color);
