--- a/styles.css
+++ b/styles.css
@@ -84,24 +84,28 @@ main h1 {
 
 .project-container {
   display: flex;
-  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 90%;
 }
 
 .project {
-  flex: 1;
   align-items: center;
   flex-direction: row;
   border: 1px solid var(--border-color);
   border-radius: 30px;
+  width: 100%;
   margin-bottom: 30px;
   transition: transform 0.2s ease, background-color 0.6s ease;
 }
 
-.project-left {
+.project-column-left {
+  flex: 1;
   margin-right: 15px;
 }
 
-.project-right {
+.project-column-right {
+  flex: 1;
   margin-left: 15px;
 }
 
