--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
   --easy-green-text: rgb(62, 207, 142);
   --button-color: rgb(55, 152, 106);
   --bright-green: rgb(28, 255, 134);
-  --card-bg: rgba(56, 255, 162, 0.137);;
+  --card-bg: rgba(56, 255, 162, 0.048);;
 }
 
 html {
@@ -73,6 +73,11 @@ main h1 {
   padding: 50px;
   margin-left: 50px;
   margin-right: 50px;
+  transition: background-color 0.6s ease;
+}
+
+.about:hover {
+  background-color: var(--card-bg);
 }
 
 .about-text {
