--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,26 @@
 @font-face {
-  font-family: 'Poppins Regular';
-  src: url('fonts/Poppins-Regular.ttf') format('truetype');
+  font-family: "Poppins Regular";
+  src: url("fonts/Poppins-Regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Poppins Light';
-  src: url('fonts/Poppins-Light.ttf') format('truetype');
+  font-family: "Poppins Light";
+  src: url("fonts/Poppins-Light.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Poppins Thin';
-  src: url('fonts/Poppins-Thin.ttf') format('truetype');
+  font-family: "Poppins Thin";
+  src: url("fonts/Poppins-Thin.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Poppins Bold';
-  src: url('fonts/Poppins-Bold.ttf') format('truetype');
+  font-family: "Poppins Bold";
+  src: url("fonts/Poppins-Bold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Poppins Semi Bold';
-  src: url('fonts/Poppins-SemiBold.ttf') format('truetype');
+  font-family: "Poppins Semi Bold";
+  src: url("fonts/Poppins-SemiBold.ttf") format("truetype");
 }
 
 :root {
@@ -31,7 +31,7 @@
   --easy-green-text: rgb(62, 207, 142);
   --button-color: rgb(55, 152, 106);
   --bright-green: rgb(28, 255, 134);
-  --card-bg: rgba(56, 255, 162, 0.048);;
+  --card-bg: rgba(56, 255, 162, 0.048);
 }
 
 html {
@@ -45,7 +45,7 @@ body {
   padding: 0;
   margin: 0;
   color: var(--white);
-  font-family: 'Poppins Light';
+  font-family: "Poppins Light";
 }
 
 /* CSS for main */
@@ -161,7 +161,6 @@ main h1 {
   justify-items: center;
   align-items: center;
   align-content: center;
-
 }
 
 .course-list-left {
@@ -210,7 +209,8 @@ textarea {
   background: transparent;
   background-color: rgba(28, 255, 134, 0.151);
   border: solid 1px rgb(100, 255, 167);
-  transition: border-color 0.3s ease, background-color 0.4s ease, transform 0.4s ease;
+  transition: border-color 0.3s ease, background-color 0.4s ease,
+    transform 0.4s ease;
   font-family: "Poppins Regular";
 }
 
@@ -278,10 +278,10 @@ form {
 }
 
 .nav-list {
-  font-family: 'Poppins Thin';
+  font-family: "Poppins Thin";
 }
 
-.nav-list li a:hover{
+.nav-list li a:hover {
   text-decoration: underline var(--easy-green-text) 1px;
   text-underline-offset: 5px;
 }
