--- a/styles.css
+++ b/styles.css
@@ -70,10 +70,16 @@ main h1 {
   flex-direction: row;
   border: 1px solid var(--border-color);
   border-radius: 30px;
-  padding: 50px;
   margin-left: 50px;
   margin-right: 50px;
   transition: background-color 0.6s ease;
+}
+
+/* Override neat-image */
+.about-image img {
+  display: block;
+  border-radius: 30px 0px 0px 30px;
+  border-width: 0px 1px 0px 0px;
 }
 
 .about:hover {
@@ -83,6 +89,7 @@ main h1 {
 .about-text {
   flex: 1;
   margin-left: 20px;
+  margin-right: 20px;
 }
 
 /* CSS for portfolio page */
